--- a/src/css/user-manage/user-manage.css
+++ b/src/css/user-manage/user-manage.css
@@ -1,10 +1,15 @@
+/**
+* @Desc 用户管理
+* @Date 2018-10-09
+* @Author 刘志杰
+*/
 body, html {
     background-color: #fff;
     height: 100%;
     width: 100%;
 }
 
-.content {
+.content-box {
     width: 100%;
     height: 100%;
 }
@@ -16,7 +21,7 @@ body, html {
     padding-left: 2%;
 }
 
-.title-header {
+.header-section .title-header {
     height: 100%;
     padding-left: 1.5%;
     border-left: 5px solid rgb(74, 80, 100);
@@ -24,12 +29,49 @@ body, html {
 }
 
 .content-section {
+    width: 100%;
+    height: 100%;
     padding-left: 3%;
     padding-right: 4%;
 }
 
-.btn button {
+.content-section .select-section {
+    width: 100%;
+    height: 20%;
+}
+
+.content-section .select-section .h2 {
+   margin-bottom: 3%;
+}
+
+.content-section .select-section .select-input {
+    float: left;
+    width: 70%;
+}
+
+.content-section .select-section label {
+    margin-left: 2%;
+    width: 300px;
+}
+
+.content-section .select-section label input[type='radio'] {
+    margin-left: 5px;
+}
+
+.content-section .select-section .select-btn {
+    float: left;
+    /*width: 20%;*/
+}
+
+.content-section .select-section .select-btn button {
+    margin-top: 2%;
+    margin-left: 2%;
     width: 100px;
-    margin-right: 5%;
-    margin-bottom: 10px;
+}
+
+.content-section .btn-section button {
+    float: left;
+    width: 100px;
+    margin-right: 1%;
+    margin-bottom: 2%;
 }
