--- a/src/css/release-manage/release-manage.css
+++ b/src/css/release-manage/release-manage.css
@@ -3,6 +3,8 @@ body, html {
     background-color: #fff;
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .content-box {
@@ -10,18 +12,15 @@ body, html {
     height: 100%;
 }
 
-.header-section {
-    width: 100%;
-    padding-top: 1%;
-    padding-bottom: 2%;
-    padding-left: 2%;
+.content-box .page-header {
+    padding-bottom: 11px;
+    margin: -22px 0 0;
+    border-bottom: 1px solid #eee;
 }
 
-.header-section .title-header {
-    height: 100%;
-    padding-left: 1.5%;
-    border-left: 5px solid rgb(74, 80, 100);
-    padding-top: 3px;
+.content-box .page-header h3 {
+    margin-left: 1.5%;
+    margin-top: 40px;
 }
 
 .content-section {
