--- a/src/css/user-manage/user-manage.css
+++ b/src/css/user-manage/user-manage.css
@@ -7,6 +7,8 @@ body, html {
     background-color: #fff;
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .content-box {
@@ -21,11 +23,15 @@ body, html {
     padding-left: 2%;
 }
 
-.header-section .title-header {
-    height: 100%;
-    padding-left: 1.5%;
-    border-left: 5px solid rgb(74, 80, 100);
-    padding-top: 3px;
+.content-box .page-header {
+    padding-bottom: 11px;
+    margin: -22px 0 0;
+    border-bottom: 1px solid #eee;
+}
+
+.content-box .page-header h3 {
+    margin-left: 1.5%;
+    margin-top: 40px;
 }
 
 .content-section {
@@ -33,6 +39,7 @@ body, html {
     height: 100%;
     padding-left: 3%;
     padding-right: 4%;
+    margin-top: 2%;
 }
 
 .content-section .select-section {
