--- a/src/css/recruit-plan/recruit-plan.css
+++ b/src/css/recruit-plan/recruit-plan.css
@@ -7,20 +7,17 @@ body, html {
     background-color: #fff;
     height: 100%;
 }
-.form-group {
-    margin-bottom: 5px;
-}
 .page-header {
     padding-bottom: 11px;
     margin: -22px 0px 0px;
     border-bottom: 1px solid #eee;
 }
 .search-content {
+    margin-bottom: 72px;
     width: 100%;
     /*height: 0%;*/
     margin-top: 20px;
     margin-bottom: 75px;
-    margin-left: -20px;
 }
 .child-content {
     height: 100%;
@@ -35,13 +32,13 @@ body, html {
 }
 
 .search-from {
-    width: 23%;
+    width: 25%;
     /*width: 500px;*/
     float: left;
     margin-left: 1%;
 }
 .search-from label {
-    min-width: 35%;
+    min-width: 70px;
     text-align: right;
 }
 .search-submit {
@@ -53,9 +50,9 @@ body, html {
     float: left;
     margin-left: 5%;
 }
-.from-controller {
+.from-controller{
     /*display: block;*/
-    width: 55%;
+    /*width: 100%;*/
     height: 34px;
     padding: 6px 12px;
     font-size: 14px;
@@ -63,7 +60,7 @@ body, html {
     color: #555;
     border: 1px solid #ccc;
     border-radius: 4px;
-    /*width: 150px;*/
+    width: 150px;
 }
 .pull-right.pagination-detail {
     display:none;
@@ -71,3 +68,8 @@ body, html {
 .th-inner {
     text-align: center;
 }
+
+.IsNull {
+    margin: 0% 0% 0% 35%;
+}
+
