--- a/src/css/release-manage/release-manage.css
+++ b/src/css/release-manage/release-manage.css
@@ -3,8 +3,6 @@ body, html {
     background-color: #fff;
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 .content-box {
@@ -12,15 +10,18 @@ body, html {
     height: 100%;
 }
 
-.content-box .page-header {
-    padding-bottom: 11px;
-    margin: -22px 0 0;
-    border-bottom: 1px solid #eee;
+.header-section {
+    width: 100%;
+    padding-top: 1%;
+    padding-bottom: 2%;
+    padding-left: 2%;
 }
 
-.content-box .page-header h3 {
-    margin-left: 1.5%;
-    margin-top: 40px;
+.header-section .title-header {
+    height: 100%;
+    padding-left: 1.5%;
+    border-left: 5px solid rgb(74, 80, 100);
+    padding-top: 3px;
 }
 
 .content-section {
@@ -82,4 +83,42 @@ body, html {
 
 .modal input {
     width: 200px;
+}
+
+.search-content {
+    margin-bottom: 72px;
+    width: 100%;
+    /*height: 0%;*/
+    margin-top: 20px;
+    margin-bottom: 75px;
+}
+
+.search-head {
+    height: 50%;
+    width: 100%;
+}
+
+.search-from {
+    width: 25%;
+    /*width: 500px;*/
+    float: left;
+    margin-left: 1%;
+}
+
+.search-submit {
+    float: right;
+    width: 22%;
+}
+
+.from-controller{
+    /*display: block;*/
+    /*width: 100%;*/
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 150px;
 }
