--- a/src/css/user-manage/user-manage.css
+++ b/src/css/user-manage/user-manage.css
@@ -43,7 +43,7 @@ body, html {
 
 .content-section .select-section {
     width: 100%;
-    height: 20%;
+    height: 40px;
 }
 
 .content-section .select-section .select-input {
@@ -55,8 +55,6 @@ body, html {
     margin-right: 4%;
     width: 200px;
 }
-
-
 
 .content-section .select-section .select-btn {
     float: left;
